--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -12,8 +12,8 @@
         </li>
       </ul>
       <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-warning" type="submit">Search</button>
+        <input class="form-control me-2" type="search" placeholder="Search for last name..." aria-label="Search" id="search" onkeyup="myFunction()"> 
+        
       </form>
     </div>
   </div>
